crates/strider/tests/snapshots/x86_kernel__calling_convention__forward_1.snap
---
source: crates/strider/tests/v1_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x401110:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "6" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "1" -> "6" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "1" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "4" -> "6" [color="#88cc88", label=EAX, fontcolor="#cccccc", fontsize=9];
  "v7" [label="Post Call\nEDX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v7" [color="#888888", style=dashed];
  "v7" -> "6" [color="#88cc88", label=EDX, fontcolor="#cccccc", fontsize=9];
  "v8" [label="Post Call\nST0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v8" [color="#888888", style=dashed];
  "v8" -> "6" [color="#88cc88", label=ST0, fontcolor="#cccccc", fontsize=9];
  "v9" [label="Post Call\nXMM0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v9" [color="#888888", style=dashed];
  "v9" -> "6" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "4" [label="arg[0] ← EAX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="arg[1] ← EDX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "10" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v11" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v11" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "12" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "12" [label="const 0x4011f0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "10" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "13" -> "10" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "14" -> "10" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "14" [label="const 0x402618:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "10" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "13" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "15" -> "13" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v16" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v16" -> "13" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "17" -> "13" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "17" [label="init\nESI", shape=Mdiamond, fillcolor="#1a3a5c"];
  "15" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
